@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.2 2018/07/28 14:40:47 brook Exp $
+# $NetBSD: Makefile,v 1.3 2019/07/31 18:53:17 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	https://cran.r-project.org/web/packages/aplpack/
 COMMENT=	Functions for drawing special plots
-LICENSE=	gnu-gpl-v2
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	aplpack
-R_PKGVER=	1.3.0
+R_PKGVER=	1.3.2
 
 USE_LANGUAGES=	# none
 
